# ComputeCop

./: .editorconfig  .gitignore  COMPUTECOP_COMPLETION.md  COMPUTECOP_PLAN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: OPERATIONS.md  RELEASE.md  migration.md
examples/: computecop.toml  endpoints.ollama-and-llama-cpp.json  llama-cpp-background-request.json  ollama-background-request.json  openai-foreground-prompt.json
scripts/: build.ps1  verify.ps1
src/computecop/: __init__.py  __main__.py  admission.py  app.py  classifier.py  cli.py  concurrency.py  config.py  dashboard.py  dashboard_controls.py  dashboard_input.py  dashboard_panels.py  doctor.py  endpoints.py  events.py  health.py  logging.py  models.py  offload.py  platform.py  policy.py  processes.py  request_queue.py  residency.py  responses.py  scheduler.py  shutdown.py  state.py  telemetry.py  telemetry_loop.py  thermal.py  tokens.py  upstream.py  yielding.py
src/computecop/web/static/: index.html
tests/: test_classifier.py  test_cli.py  test_concurrency.py  test_config.py  test_dashboard.py  test_dashboard_controls.py  test_doctor.py  test_endpoints.py  test_events.py  test_examples.py  test_health.py  test_imports.py  test_metrics.py  test_policy_admission.py  test_proxy.py  test_residency.py  test_scheduler.py  test_shutdown.py  test_state_queue.py  test_telemetry.py  test_tokens.py  test_upstream.py  test_web.py
