[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "computecop"
version = "0.2.5"
description = "Async local inference traffic controller for RAM, thermal, and priority-aware compute budgeting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ComputeCop contributors" }
]
keywords = ["local inference", "proxy", "psutil", "ollama", "llama.cpp", "asyncio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "psutil>=5.9.8,<6",
  "pydantic>=2.7,<3",
  "rich>=13.7,<14",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
]

[project.scripts]
computecop = "computecop.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/computecop"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/SECURITY.md",
  "/docs",
  "/examples",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["RUF012"]

[tool.coverage.run]
branch = true
source = ["computecop"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
packages = ["computecop"]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["psutil.*"]
ignore_missing_imports = true
